--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                                 'Acceleration Z: ' + acceleration.z + '<br />' +
                                 'Timestamp: ' + acceleration.timestamp + '<br />';
 
-                    }), function () {
+                    }, function () {
                         alert('onError!');
-//                        clearInterval(int);
+//                        clearInterval(int); 
                     };
 //                }, 1500);
             }
