--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
         <div id="accelerometer">Waiting for accelerometer...</div>
         <button onclick="application.stopWatch();">Stop Watching</button>
         <button onclick="application.startWatch();">Start Watching</button>
+        <hr>
+        <input name="" id="numberTxt" placeholder="Enter mobile number" value="" type="tel" />
+        <br/>
+        <textarea name="" id="messageTxt" placeholder="Enter message"></textarea>
+        <br/>
+        <input id="btnDefaultSMS" type="button" value="Send SMS" />
     </body>
 </html>
