--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="js/lib/jquery/jquery.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
+            jQuery.noConflict();
             application.initialize();
         </script>
     </head>
