--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
         <title>Acceleration Example</title>
 
         <script src="phonegap.js"></script>
-        <script src="js/lib/jquery/jquery.min.js"></script>
+        <script src="js/libs/jquery/jquery.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
-            jQuery.noConflict();
             application.initialize();
         </script>
     </head>
