--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         </script>
     </head>
     <body>
+        <div id="ballContainer" style="width: 60%; margin: 0 auto; position: relative;">
+            <div id="ball" style="width: 20px; height: 20px; background: #000; position: absolute; left: 50%; margin-left: -10px;"></div>
+        </div>
         <div id="accelerometer">Waiting for accelerometer...</div>
         <button onclick="application.stopWatch();">Stop Watching</button>
         <button onclick="application.startWatch();">Start Watching</button>
